[gd_scene load_steps=8 format=3 uid="uid://kqy6xutjycwn"]

[ext_resource type="Script" path="res://Enemies/scripts/plasma_cell.gd" id="1_rv674"]
[ext_resource type="Texture2D" uid="uid://crhpbdqtk5lm3" path="res://Enemies/Assets/PlasmaCell/PlasmaCell.png" id="2_vmi3n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_y8p3g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vmi3n")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cu6k"]
radius = 14.625
height = 29.2501

[sub_resource type="CircleShape2D" id="CircleShape2D_ojmti"]
radius = 32.5576

[sub_resource type="SystemFont" id="SystemFont_ahjf2"]
font_names = PackedStringArray("Consolas")
multichannel_signed_distance_field = true

[sub_resource type="LabelSettings" id="LabelSettings_cmkqg"]
line_spacing = 2.0
font = SubResource("SystemFont_ahjf2")
font_size = 8
outline_size = 1
outline_color = Color(0.530242, 0, 0.0861157, 1)
shadow_size = 2

[node name="PlasmaCell" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_rv674")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y8p3g")
frame_progress = 0.613338

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.07687
shape = SubResource("CapsuleShape2D_4cu6k")

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_ojmti")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.663

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.886275, 0.00392157, 0.886275, 1)
offset_left = -16.0
offset_top = 19.0
offset_right = 16.0
offset_bottom = 25.0
show_percentage = false

[node name="DisplayDmg" type="Label" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 27.0
offset_bottom = 27.0
text = "30"
label_settings = SubResource("LabelSettings_cmkqg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="tookDamage" type="Timer" parent="."]

[connection signal="body_entered" from="AttackRange" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="tookDamage" to="." method="_on_took_damage_timeout"]
